# pysigil

./: .gitignore  .pre-commit-config.yaml  AUTHORS_GUIDE.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements-test.txt  requirements.md  requirements.txt
.github/workflows/: ci.yml
appdirs/: __init__.py
docs/: gui.md  integration.md  meta_csv.md  secrets.md
prototypes/: aurelia_theme.py  demo_aurelia.py  edit_button.py  locks.py  pill_colors.py  theme.py  tk.py  ui_spec.md
sigil/: __init__.py  _appdirs_stub.py  cli.py  core.py  env.py  errors.py  helpers.py  hub.py  widgets.py
sigil/backend/: __init__.py  base.py  ini_backend.py  json_backend.py  yaml_backend.py
sigil/gui/: __init__.py  model.py  tk_view.py  util.py
sigil/secrets/: __init__.py
sigilcraft/: __init__.py  constants.py  core.py  core_defaults.ini  errors.py  gui.py  helpers.py  hub.py  keys.py
sigilcraft/backend/: base.py  ini_backend.py  json_backend.py  yaml_backend.py
sigilcraft/gui/: __init__.py  editor.py  icons.py  model.py  tk_view.py
src/pyprojroot/: __init__.py
src/pysigil/: __init__.py  api.py  authoring.py  backend_ini.py  cli.py  config.py  core.py  core_defaults.py  defaults.py  discovery.py  env.py  errors.py  events.py  gui.py  gui_state.py  helpers.py  hub.py  io_config.py  keys.py  merge_policy.py  metadata.py  orchestrator.py  paths.py  policy.py  provider_id.py  provider_registry.py  resolver.py  root.py  settings_metadata.py  toolkit.py
src/pysigil/.sigil/: metadata.ini  settings.ini
src/pysigil/backends/: base.py  ini_backend.py  json_backend.py  yaml_backend.py
src/pysigil/gui/: __init__.py  author.py  config_gui.py  editor.py  gui_state.py  hub.py  widgets.py
src/pysigil/secrets/: __init__.py
src/pysigil/ui/: __init__.py  core.py  (+10 more)
tests/: manual_api.py  manual_orchestrator.py  manual_tests.py  manual_ui.py  manual_user_settings_metadata_roundtrip.py  test_api.py  test_api_normalization.py  test_app.py  test_author_adapter.py  test_author_entrypoint.py  test_author_mode.py  test_author_tools_window.py  test_authoring_validation.py  test_backend_ini.py  test_backend_ini_sections.py  test_cli.py  test_cli_register.py  test_cli_where.py  test_config.py  test_core.py  test_core_basic.py  test_core_defaults.py  test_defaults_loader.py  test_detect.py  test_discovery.py  test_env.py  test_events.py  test_export_env.py  test_field_row.py  test_gui.py  test_gui_logic.py  test_gui_model.py  test_gui_startup.py  test_helpers.py  test_hub.py  test_invalid_names.py  test_io_config_defaults.py  test_json_backend.py  test_merge_policy.py  test_merge_policy_helpers.py  (+25 more)
tests/docker/: Dockerfile  README_docker.md  run_pytest.sh  smoke_cli.sh
tests/manual/: manual_author_gui.py  manual_list_editor.py  manual_orchestrator.py  manual_ui.py  manual_user_settings_metadata.py  manual_user_settings_metadata_round_trip.py  test_list.csv
tests/manual_tests/: README.md  manual_tests.py
tests/ui/: test_edit_dialog.py  test_list_editor.py  test_provider_adapter.py  test_scope_menu.py  test_sections_order_dialog.py
tools/: validate_meta.py
(+15 files in other folders)
