[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigil"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["appdirs"]

[project.optional-dependencies]
json5 = ["pyjson5>=1.6"]
gui = []
secrets = ["keyring>=25"]
secrets-crypto = ["keyring>=25", "cryptography>=42"]

[project.scripts]
sigil = "sigil.cli:main"
sigil-gui = "sigil.gui:launch_gui"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["F", "E", "W", "I", "B", "UP", "N"]
ignore = ["E501", "N801", "N812", "N815"]
fix = true
unsafe-fixes = false

[tool.ruff.lint.isort]
known-first-party = ["sigil"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true
