[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pysigil*"]
exclude = ["appdirs"]

[tool.setuptools.package-dir]
"" = "src"

[project]
name = "pysigil"
description = "Preferences & secrets manager with layered scopes and tuple-key internals"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.0"
dependencies = ["appdirs"]
authors = [{ name = "Tim Marquart" }]

[project.optional-dependencies]
json5 = ["pyjson5>=1.6"]
gui = []
secrets = ["keyring>=25"]
secrets-crypto = ["keyring>=25", "cryptography>=42"]

[project.scripts]
sigil = "pysigil.cli:main"
sigil-gui = "pysigil.gui:launch_gui"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["F", "E", "W", "I", "B", "UP", "N"]
ignore = ["E501", "N801", "N812", "N815"]
fix = true
unsafe-fixes = false

[tool.ruff.lint.isort]
known-first-party = ["pysigil"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true
