[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pysigil*"]
exclude = ["appdirs"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = [".sigil/settings.ini"]

[project]
name = "pysigil"
description = "Preferences & secrets manager with layered scopes and tuple-key internals"
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.0"
dependencies = [
  "appdirs",
  "tomlkit",
  "click>=8.1",
  "pyprojroot>=0.3.0",
]
authors = [{ name = "Tim Marquart" }]

[project.optional-dependencies]
json5 = ["pyjson5>=1.6"]
gui = []
secrets = ["keyring>=25"]
secrets-crypto = ["keyring>=25", "cryptography>=42"]

[project.scripts]
sigil = "pysigil.cli:cli"
pysigil = "pysigil.cli:cli"

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP", "N"]
ignore = ["E501", "N801", "N812", "N815"]

[tool.ruff.lint.isort]
known-first-party = ["pysigil"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true
